root/namesapce-sample-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sample-app
  labels:
    name: sample-app
    istio-injection: enabled
    istio.io/rev: asm-managed
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: asm-auth-policy
  namespace: sample-app
spec:
  mtls:
    mode: PERMISSIVE
