root/namespace-asm-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: asm-ingress
  labels:
    name: asm-ingress
    istio-injection: enabled
    istio.io/rev: asm-managed
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: asm-auth-policy
  namespace: asm-ingress
spec:
  mtls:
    mode: PERMISSIVE
