root/deployment-sample-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whereami-v1
  namespace: sample-app    
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whereami-v1
  template:
    metadata:
      labels:
        app: whereami-v1
    spec:
      containers:
      - name: whereami
        image: us-docker.pkg.dev/google-samples/containers/gke/whereami:v1.2.20
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: whereami-v1
  namespace: sample-app              
spec:
  selector:
    app: whereami-v1
  ports:
  - port: 8080
    targetPort: 8080
